--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,7 @@ jobs:
           - 12
         working-directory:
           - core
+          - grammy-inline-menu
           - telegraf-inline-menu
     steps:
       - uses: actions/checkout@v2
